# plumb

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.github/cla/: check.sh  entity-cla.md  individual-cla.md
.github/workflows/: ci.yml  cla.yml
api/: app.py  logging.py  main.py  schemas.py
charts/plumb/: Chart.yaml  values.yaml
charts/plumb/files/: calibration-artifact.yaml
charts/plumb/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  networkpolicy.yaml  service.yaml
config/: verifier.yaml
config/calibration/: lettucedect-v2-mmbert-base-sentence-v2.yaml
docs/: ci-gate-demo.md  probe.md  workflow.md
docs/adr/: 0001-api-language.md  0002-embedding-compatibility.md  0003-tiered-verification.md  0004-signal-stack.md  0005-one-engine-three-surfaces.md  0006-groundedness-model.md  0007-tier2-response-shape.md  0008-calibration-methodology.md  0009-claim-decomposition.md  0010-nli-model.md  0010-thorough-mode-retrieval.md  0011-nli-model.md  template.md
docs/devlog/: 2026-wk1.md  2026-wk2.md
docs/playbooks/: add-kb-adapter.md
docs/spikes/: 2026-07-04-fastapi-hhem.md  2026-07-05-go-api-python-sidecar.md
engine/: config.py  decomposition.py  gate.py  scoring.py  verdict.py
engine/calibration/: __init__.py  artifact.py  platt.py
engine/decomposition/: __init__.py  reduction.py  segmentation.py
engine/retrieval/: __init__.py  expansion.py  pipeline.py  pool.py  postgres.py  rerank.py  store.py
engine/signals/: __init__.py  groundedness.py
evals/: RESULTS.md  pyproject.toml
evals/bench/: __init__.py  aggrefact.py  aggrefact_run.py  artifact_run.py  calibration.py  calibration_run.py  data.py  harness.py  latency.py  latency_run.py  metrics.py  nli.py  nli_run.py  run.py  sentence.py  sentence_run.py  span_calibration.py  span_calibration_run.py  spans.py  store_seed.py  thorough_run.py
evals/bench/adapters/: __init__.py  granite_guardian.py  hhem.py  lettucedetect_adapter.py  minicheck_flan_t5.py  nli.py
evals/results/: calibration-fit-lettucedetect-v2.json  calibration-ood-lettucedetect-v2.json  granite-guardian-3.2-3b-a800m.json  hhem.json  latency-fast-lettucedetect-v2.json  lettucedetect-v1-large.json  lettucedetect-v2-mmbert-base.json  minicheck-flan-t5-large.json  nli-deberta-base-long-nli.json  nli-deberta-v3-base-mnli-fever-anli.json  nli-mdeberta-v3-base-mnli-xnli.json  nli-modernbert-base-nli.json  nli-modernbert-large-nli.json  sentence-lettucedetect-v2.json  span-calibration-fit-lettucedetect-v2.json
evals/tests/: test_aggrefact.py  test_artifact_run.py  test_calibration.py  test_data.py  test_harness.py  test_latency.py  test_metrics.py  test_minicheck_logic.py  test_nli.py  test_sentence.py  test_span_calibration.py  test_spans.py
openspec/: config.yaml
openspec/changes/add-helm-chart/: tasks.md
openspec/changes/add-thorough-mode/: design.md  proposal.md  tasks.md
openspec/changes/add-thorough-mode/specs/evidence-retrieval/: spec.md
openspec/changes/add-thorough-mode/specs/helm-deploy/: spec.md
openspec/changes/add-thorough-mode/specs/verify-api/: spec.md
openspec/changes/add-verify-endpoint/: design.md  proposal.md  tasks.md
openspec/changes/add-verify-endpoint/specs/verify-api/: spec.md
openspec/changes/archive/2026-07-05-add-helm-chart/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-add-verify-endpoint/: tasks.md
openspec/changes/archive/2026-07-05-migrate-groundedness-lettucedetect-v2/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-calibration-v0/: proposal.md  tasks.md
openspec/changes/archive/2026-07-11-joint-inference-spans/: design.md  proposal.md
openspec/changes/archive/2026-07-11-sentence-decomposition/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-calibrated-span-confidences/: proposal.md  tasks.md
openspec/changes/calibrated-span-confidences/: design.md  tasks.md
openspec/changes/calibrated-span-confidences/specs/groundedness-scoring/: spec.md
openspec/changes/calibrated-span-confidences/specs/verify-api/: spec.md
openspec/changes/calibration-v0/: design.md  tasks.md
openspec/changes/calibration-v0/specs/calibration/: spec.md
openspec/changes/joint-inference-spans/: tasks.md
openspec/changes/sentence-decomposition/: tasks.md
openspec/specs/calibration/: spec.md
openspec/specs/groundedness-scoring/: spec.md
openspec/specs/helm-deploy/: spec.md
openspec/specs/verify-api/: spec.md
tests/: conftest.py  test_app_calibration.py  test_calibration.py  test_chart_render.py  test_config.py  test_decomposition.py  test_e2e_smoke.py  test_health.py  test_hhem_model.py  test_logging.py  test_model.py  test_scoring.py  test_verdict.py  test_verify_contract.py
tests/api/: conftest.py  test_app_calibration.py  test_verify_contract.py  test_verify_thorough.py
tests/charts/: test_chart_render.py
tests/e2e/: postgres.yaml  values-thorough.yaml
tests/engine/: factories.py  test_config.py  test_gate.py  test_model.py
tests/engine/calibration/: test_artifact.py  test_platt.py
tests/engine/decomposition/: test_reduction.py  test_segmentation.py
tests/engine/retrieval/: test_expansion.py  test_pool.py  test_postgres.py  test_rerank.py  test_store.py
tests/engine/signals/: fakes.py  test_groundedness.py
(+10 files in other folders)
