[project]
name = "plumb"
version = "0.1.0"
description = "The open-source, self-hostable groundedness gate"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139",
    "pydantic>=2.9",
    "pyyaml>=6",
    "uvicorn>=0.50",
]

[project.optional-dependencies]
# HHEM-2.1-open's remote code breaks on transformers 5.x, and the open release
# is frozen upstream, so the <5 pin is permanent for this model
# (docs/spikes/2026-07-04-fastapi-hhem.md; successor decided in #18).
hhem = [
    "transformers>=4.57,<5",
    "torch>=2.12",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=1.15",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.15",
    "types-pyyaml>=6",
]

[tool.uv.sources]
# On Linux the default PyPI torch wheels bundle CUDA (~5 GB installed); HHEM
# serves on CPU, so the container image resolves torch from the CPU wheel
# index instead. macOS keeps PyPI (its wheels are CPU/MPS already). Revisit
# alongside the vLLM/GPU work.
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "model: loads the real HHEM weights; needs the 'hhem' extra and a model download",
    "e2e: golden verify request against a deployed instance; needs PLUMB_URL reachable",
]
addopts = "-m 'not model and not e2e'"

[tool.coverage.run]
source = ["engine", "api"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
files = ["engine", "api"]
strict = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true
