[project]
name = "plumb-evals"
version = "0.1.0"
description = "Benchmark harness for the groundedness signal model decision (#18)"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.12",
    "datasets>=4",
    "lettucedetect>=0.2.1",
    "nltk>=3.9",
    "psutil>=7",
    "sentencepiece>=0.2",
    # The engine itself, so the sentence-level benchmark (#45) segments and scores
    # through the exact code that ships — one segmenter, no divergent copy.
    "plumb",
]

# HHEM-2.1-open's remote code breaks on transformers 5.x (see root pyproject),
# while LettuceDetect v2's tokenizer config requires 5.x (TokenizersBackend).
# The candidates cannot share an environment — pick one per run:
#   uv run --extra tf4 python -m bench.run ...   (hhem, lettucedetect-v1, minicheck, granite)
#   uv run --extra tf5 python -m bench.run ...   (lettucedetect-v2, cross-checks)
[project.optional-dependencies]
tf4 = ["transformers>=4.57,<5"]
tf5 = ["transformers>=5"]

[tool.uv]
conflicts = [[{ extra = "tf4" }, { extra = "tf5" }]]

[tool.uv.sources]
# The engine lives one directory up; the sentence-level benchmark imports it.
plumb = { path = "..", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
